--- a/Index.updated.html
+++ b/Index.updated.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!-- Defines character encoding -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- defines the viewport properties, optimizes the layout for different screen sizes.-->
     <title>My Profile Page</title>
-    <style>
+<style>
 
 /* Basic Reset */
 * {
@@ -15,7 +15,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
+    line-height: 1.6; /* Set line height to 1.6 times the font size */
     background-color: #e8e8ec;
 }
 
@@ -30,13 +30,13 @@ body {
 .main-nav ul {
     list-style: none; /* Removes bullet points */
     display: flex; /* Displays the list horizontally */
-    justify-content: center; /* Puts the list at the Center of the page */
+    justify-content: center; /* For centering items inside a flexbox or grid container. */
     gap: 2rem; /* Creates a wider gap between the list items */
 }
 
 .main-nav a {
     color: white; 
-    text-decoration: none; /* Removed the underline */
+    text-decoration: none; /* Removes the underline */
     padding: 0.5rem 1rem; /* Creates a wider gap between the list items */
     transition: color 0.3s ease; /* Creates a transition */
 }
@@ -47,7 +47,7 @@ body {
 
 /* Header Styling */
 .header {
-    text-align: center;
+    text-align: center; /* For centering text and inline elements. */
     padding: 3rem 1rem; /* Creates some space from the top and bottom */
     background-color: #fff;
     margin-bottom: 2rem;
@@ -113,6 +113,10 @@ li {
 a {
     text-decoration: none;
 }
+.main-paragraph {
+    padding-top: 0;
+    padding-bottom: 20px;
+}
 
 .email {
     color: #0066cc;
@@ -127,6 +131,24 @@ a {
     color: white;
     margin-top: 2rem;
 }
+
+.footer-nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 20px;
+}
+
+.footer-nav a {
+    color: white;
+    transition: color 0.3s ease;
+}
+
+.footer-nav a:hover {
+    color: #ffd700
+}
+
     </style>
 </head>
 <body>
@@ -150,12 +172,12 @@ a {
 
     <!-- Main Content Section -->
     <div class="main-content"> <!-- Wraps the main content sections -->
-        <div class="about-section" id="about"> <!-- gives an "id" selector to "about" to style it seperately -->
+        <div class="about-section">
             <h2>About Us</h2>
-            <p>Welcome to our website! Here you'll find <span style="font-size: 1.2em;">amazing content</span> about web development.</p>
+            <p>Welcome to my website! This is the first website I made to practice<span style="font-size: 1.2em;"> HTML</span> and <strong>CSS</strong></p>
         </div>
 
-    <div class="services-section" id="services"> <!-- gives an "id" selector to "services" to style it seperately -->
+    <div class="services-section">
         <h2>Our Services</h2>
         <p>We specialize in:</p>
         <ul>
@@ -167,11 +189,10 @@ a {
 
     <!-- Adding an image -->
     <h2>About Me</h2>
-    <img src ="CSS/images/profile picture.jpg" alt="Profile picture">
-        <p>Hello! I'm learning web development. This is my first webpage where I'm practicing HTML and CSS.</p>
-    <br>
+    <img src ="CSS/images/profile-picture.jpg" alt="Profile-picture">
+        <p class="main-paragraph">Hello! I'm learning web development. This is my first webpage where I'm practicing HTML and CSS.</p>
         <div class="contact-section" id="contact">
-            <h2>Contact Us</h2>
+            <h2>Contact</h2>
             <p>Get in touch: <span class="email">aro.castello@gmail.com</span></p>
         </div>
     </div>
@@ -179,6 +200,14 @@ a {
     <!-- Footer Section -->
     <div class="footer">
         <p>&copy; 2024 My Website</p>
-    </div>
+            <nav class="footer-nav"> <!-- Specifies that this is the footer's navigation of the page -->
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
 </body>
 </html>
