--- a/Coding Challenges/Challenge 2.html
+++ b/Coding Challenges/Challenge 2.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="second-section">
-        <img src="images/gallery1.jpg" alt="Gallery 1" />
+        <img src="css/images/gallery1.jpg" alt="Gallery 1" />
         <p>
             <span style="word-spacing: 1.4rem;">LORAM IPSUM DOLOR SIT AMET,</span><br />
             <span style="word-spacing: 1.5rem;">CONSECTETUR, DED DO ESUSMOD</span><br />
@@ -51,21 +51,21 @@
 
     <div class="maincontainer">
         <div class="imagecontainer">
-            <img src="images/gallery2.jpg" alt="Gallery 2"/>
+            <img src="css/images/gallery2.jpg" alt="Gallery 2"/>
             <p>LORAM IPSUM DOLOR SIT AMET, CONSECTETUR, DED DO ESUSMOD TEMPOR INCIDEDUNT UT</p>
         </div>
-        <div class="imagecontainer">
+        <div class="css/imagecontainer">
             <img src="images/gallery3.jpg" alt="Gallery 3"/>
             <p>LORAM IPSUM DOLOR SIT AMET, CONSECTETUR, DED DO ESUSMOD TEMPOR INCIDEDUNT UT</p>
         </div>
-        <div class="imagecontainer">
+        <div class="css/imagecontainer">
             <img src="images/gallery4.jpg" alt="Gallery 4"/>
             <p>LORAM IPSUM DOLOR SIT AMET, CONSECTETUR, DED DO ESUSMOD TEMPOR INCIDEDUNT UT</p>
         </div>
     </div>
 
     <div class="third-section">
-        <img src="images/gallery5.jpg" alt="Gallery 5" />
+        <img src="css/images/gallery5.jpg" alt="Gallery 5" />
         <p>
             <span style="word-spacing: 1.4rem;">LORAM IPSUM DOLOR SIT AMET,</span><br />
             <span style="word-spacing: 1.5rem;">CONSECTETUR, DED DO ESUSMOD</span><br />
