--- a/Coding Challenges/Challenge 3.html
+++ b/Coding Challenges/Challenge 3.html
@@ -27,7 +27,7 @@
     </div>
 
 <div class="main-section">
-        <img src="images/yacht.jpg"/>
+        <img src="css/images/yacht.jpg"/>
 
         <div class="paragraph">
         <h2>HERO TITLE EXAMPLE</h2>
@@ -63,11 +63,11 @@
     <h2>SPONSORS EXAMPLE</h2>
     <h3>SPONSORS DESCRIPTION</h3>
     <div class="images">
-    <img src="images/gallery1.jpg">
-    <img src="images/gallery2.jpg">
-    <img src="images/gallery3.jpg">
-    <img src="images/gallery4.jpg">
-    <img src="images/gallery5.jpg">
+    <img src="css/images/gallery1.jpg">
+    <img src="css/images/gallery2.jpg">
+    <img src="css/images/gallery3.jpg">
+    <img src="css/images/gallery4.jpg">
+    <img src="css/images/gallery5.jpg">
     </div>
 </div>
 
